<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/listNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:textSize="18dp"
            android:background="#cde9ff"
            android:text="@string/listNoteError" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="#eaf7ff"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/listLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/listLocationLabel"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/listLatLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/listLattitude"
                android:layout_marginRight="4dp"
                android:text="@string/listLatLabel" />

            <TextView
                android:id="@+id/listLattitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/listLongLabel"
                android:layout_marginRight="16dp"
                android:text="@string/listLatError" />

            <TextView
                android:id="@+id/listLongLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/listLongitude"
                android:layout_marginRight="4dp"
                android:text="@string/listLongLabel" />

            <TextView
                android:id="@+id/listLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="4dp"
                android:text="@string/listLongError" />

        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>